@@ -6,7 +6,8 @@ Distributed under the GPL v3
 
 - Fixed downloading of Areena audio streams
 - Fixed support for some videos that are only available at a low resolution
-- Include the series title in the default output file name
+- Include the series title in generated output file names
+- Template for generated output file names: --output-template
 
 Version 20181103
 
